# knowledge-base-search

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  TODO.md  demo_requests.sh  pyproject.toml  run.sh  system_design.mermaid  test_setup.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: completeness.py  documents.py  health.py  qa.py  search.py
app/core/: config.py
app/models/: __init__.py
app/schemas/: __init__.py  completeness.py  document.py  health.py  qa.py  search.py
app/services/: __init__.py  document_processor.py  llm_service.py  vector_store.py
example_docs/: introduction_to_ai.docx  web_development_basics.txt
tests/: conftest.py  test_api.py
